z-index-fix

--- a/src/sass/_burger.scss
+++ b/src/sass/_burger.scss
@@ -20,7 +20,7 @@
 
 .mob-menu {
   position: fixed;
-  z-index: 9999;
+  z-index: 80;
   top: 0;
   right: 0;
   width: 250px;
